--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "core-js": "^3.16.1",
-    "fractional": "^1.0.0",
+    "fraction.js": "^4.1.1",
     "regenerator-runtime": "^0.13.9"
   }
 }
